force-app/main/default/objects/custom_create171__c/custom_create171__c.object-meta.xml
<CustomObject>
    <label>Custom created object171</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects171</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>