force-app/main/default/objects/custom_create171__c/fields/custom_create_171field548__c.field-meta.xml
<CustomField>
    <fullName>custom_create_171field548__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 171field548</label>
    <type>Checkbox</type>
</CustomField>