force-app/main/default/objects/custom_create171__c/fields/custom_create_171field552__c.field-meta.xml
<CustomField>
    <fullName>custom_create_171field552__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 171field552</label>
    <type>Checkbox</type>
</CustomField>